# translate-everywhere

./: .env.sample  .gitignore  .gitmodules  README.md  main.py  pyproject.toml
api/: api_router.py
api/api_v1/: end2end.py
core/: asr.py  conversion.py  end2end.py  translator.py  tts.py
core/onnx_infer/: vc_inference.py
jupyter_test/: azure_custom_speech_test.ipynb  azure_custom_speech_translation.ipynb  azure_speech_language_detection.ipynb  azure_speech_test.ipynb  azure_speech_translation.ipynb  azure_translation_test.ipynb  coqui-tts.ipynb  faster-whisper-test.ipynb  melotts_test.ipynb  openvoice_v2_test.ipynb  speaker_selection.ipynb  translate_everywhere_test.ipynb
jupyter_test/processed/example_reference_v2_Cz+Mo6TtWn_^ElNh_^/: se.pth
jupyter_test/processed/test_translate_v2_6Js7bsrsYsNBAxvU/: se.pth
jupyter_test/processed/test_translate_v2_H383lhSRU+3DsNSR/: se.pth
jupyter_test/processed/test_v2_hOkIP7Toe+J0JsN0/: se.pth
processed/azure_temp_v2_9LanEU2k8xlI0B8+/: se.pth
processed/temp_v2_DCInqzi1biWb1NE9/: se.pth
test_code/: manual_api_test.py  manual_test.py  sts_api_test.py  tts_api_test.py
test_code/processed/azure_temp_v2_cF4G2f565c67JjQD/: se.pth
test_code/processed/temp_v2_DCInqzi1biWb1NE9/: se.pth
test_code/processed/test_16k_v2_3cizdVWy3p39oI_^2/: se.pth
test_code/processed/test_16k_v2_bZma9qb2NSdUTIQU/: se.pth
test_code/processed/test_v2_hOkIP7Toe+J0JsN0/: se.pth
